--- a/css/responsive.css
+++ b/css/responsive.css
@@ -63,6 +63,12 @@ Mobile Portrait
     .site {
         background-image: url("../images/MobileBackground.svg");
     }
+    .logo {
+        width: 30px;
+
+        top: 5px;
+        left: 5px;
+    }
 }
 
 
