--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,7 +43,7 @@ Mobile Landscape
 
 @media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
     .logo {
-        width: 35px;
+        width: 40px;
 
         top: 10px;
         left: 10px;
@@ -71,12 +71,21 @@ Mobile Portrait
     }
 }
 
+/* ----------- iPhone 4 and 4S ----------- */
+@media only screen and (max-width: 400px) and (orientation: portrait) {
+    .logo {
+        width: 30px;
+
+        top: 5px;
+        left: 5px;
+    }
+}
 
 
 /* ----------- iPhone 4 and 4S ----------- */
 @media only screen and (max-width: 320px) and (orientation: portrait) {
     .logo {
-        width: 15px;
+        width: 30px;
 
         top: 5px;
         left: 5px;
