--- a/css/animation.css
+++ b/css/animation.css
@@ -70,28 +70,31 @@ Baby Children
 ----------------------------------------------------------------------------- */
 #ctaBtn {
     background-color: #7F1BCE;
+    color: white;
     border: 0px;
     border-radius: 50px;
-    padding: 0.8em 2.2em;
-    color: white;
+    padding: 0.7em 2em;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
     font-weight: bold;
+
 }
 
 /* The rectangle background with a round border at the corner. */
 #txtEntryFieldWrapper {
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 40px;
-    padding: 10px 0px;
+    padding: 0.7em 0px;
 }
 
 #sendBtn {
-    font-weight: bold;
     background-color: #7F1BCE;
     color: white;
     border-radius: 40px;
-    padding: 11.5px 0px;
-    ont-family: 'Open Sans', sans-serif;
+    padding: 0.7em 0px;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+    font-weight: bold;
 }
 
 
