--- a/css/animation.css
+++ b/css/animation.css
@@ -38,8 +38,9 @@ The CTA button also fades out.
 #ctaTxtWrapper {
     position: absolute;
     bottom: 15%;
-    left: 50%;
-    transform: translateX(-50%);
+
+    left: 0;
+    right: 0;
 }
 
 #ctaBtnWrapper {
