--- a/css/typewriter.css
+++ b/css/typewriter.css
@@ -11,3 +11,21 @@ Adding content to p.
     content: '';
     display: inline-block;
 }
+/*
+Mobile Portrait
+------------------------------------------------------------------------------*/
+
+@media only screen and (max-width: 480px) and (orientation: portrait) {
+    #ctaTxtWrapper p, #txtIn6 p {
+        font-size: 1.6em;
+        font-weight: bold;
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+}
+/* ----------- iPhone 4 and 4S ----------- */
+@media only screen and (max-width: 320px) and (orientation: portrait) {
+    #ctaTxtWrapper p, #txtIn6 p {
+        font-size: 1.2em;
+    }
+}
