--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,6 +36,21 @@ html, body {
     left: 1em;
 }
 
+.robot {
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.fullrobo {
+    bottom: 25%;
+}
+
+.flyRobo {
+    bottom: 50%;
+}
+
 
 
 /* -----------------------------------------------------------------------------
