--- a/css/animation.css
+++ b/css/animation.css
@@ -147,3 +147,43 @@ The Rectangle & input is shorter and the SEND button is shown.
 .txtEntryFieldWrapper   { width: 395px; margin-right: 5px; }
 .txtEntryField          { width: 335px; }
 #sendBtn                { width: 100px;  }
+
+
+
+
+
+/*
+Mobile Portrait
+------------------------------------------------------------------------------*/
+
+@media only screen and (max-width: 480px) and (orientation: portrait) {
+
+    /* OnClick of the CTA button and form will show. */
+    #emailForm  { display: block; }
+
+    /* After the user types their email, the send button appears below the text entry field, to the right */
+    #sendBtn    { display: block; }
+
+    #ctaTxtWrapper {
+        bottom: 18%;
+    }
+
+    #txtEntryField {
+        margin-left: 20px;
+    }
+
+    .txtEntryFieldWrapperMobile { width: 320px; }
+    .txtEntryFieldMobile        { width: 280px; }
+
+    #txtEntryFieldWrapper       { padding: 0.4em 0; }
+    #sendBtn                    { width: 80px; font-size: 0.8em; margin: 0 auto; }
+
+    #txtEntryFieldWrapper {
+
+    }
+    #sendBtn {
+        margin-bottom: -20px;
+        margin-top: 10px;
+    }
+
+}
