--- a/css/typewriter.css
+++ b/css/typewriter.css
@@ -12,6 +12,17 @@ Adding content to p.
     display: inline-block;
 }
 /*
+Mobile Landscape
+----------------------------------------------------------------------------- */
+
+@media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
+    #ctaTxtWrapper p, #txtIn6 p {
+        font-size: 1.2em;
+    }
+}
+
+
+/*
 Mobile Portrait
 ------------------------------------------------------------------------------*/
 
