--- a/css/animation.css
+++ b/css/animation.css
@@ -151,18 +151,12 @@ The Rectangle & input is shorter and the SEND button is shown.
 
 
 
-
 /*
 Mobile Landscape
 ----------------------------------------------------------------------------- */
 
 @media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
-
-    #ctaBtn {
-        font-size: 0.5em;
-    }
-
-    /* #sendBtn { width: 80px; font-size: 0.8em; margin: 0 auto; } */
+    #ctaTxtWrapper { bottom: 18%; }
 }
 
 
