--- a/css/animation.css
+++ b/css/animation.css
@@ -157,6 +157,7 @@ Mobile Landscape
 
 @media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
     #ctaTxtWrapper { bottom: 18%; }
+    #ctaBtnWrapper { bottom: 3%; }
 }
 
 
