--- a/css/animation.css
+++ b/css/animation.css
@@ -127,8 +127,20 @@ The Rectangle & input is shorter and the SEND button is shown.
     #ctaTxtWrapper { bottom: 18%; }
     #txtEntryField { margin-left: 20px; }
 
-    .txtEntryFieldWrapperMobile { width: 320px; }
-    .txtEntryFieldMobile        { width: 280px; }
+
+    /*
+    Before users typing their emails.
+    The Rectangle & input is longer.
+    ------------------------------------------------------------------------------*/
+    .txtEntryFieldWrapperBefore { width: 320px; }
+    .txtEntryFieldBefore        { width: 280px; }
+
+    /*
+    After users typing their emails.
+    The Rectangle & input is shorter and the SEND button is shown.
+    ------------------------------------------------------------------------------*/
+    .txtEntryFieldWrapper { width: 320px; }
+    .txtEntryField        { width: 280px; }
 
     #txtEntryFieldWrapper       { padding: 0.4em 0; }
     #sendBtn                    { width: 80px; font-size: 0.8em; margin: 0 auto; }
@@ -187,10 +199,5 @@ The CTA button also fades out.
 
 @media only screen and (max-width: 480px) and (orientation: portrait) {
     /* OnClick of the CTA button and form will show. */
-    .emailFormInit      { display: block; }
-
-    /* OnClick of the CTA button and form will show. */
-    .emailFormMobile    { display: block; }
-
-    .sendBtnInitMobile  { display: block;}
+    .emailForm { display: block; }
 }
