--- a/css/typewriter.css
+++ b/css/typewriter.css
@@ -16,9 +16,7 @@ Mobile Landscape
 ----------------------------------------------------------------------------- */
 
 @media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
-    #ctaTxtWrapper p, #txtIn6 p {
-        font-size: 1.2em;
-    }
+    #ctaTxtWrapper p, #txtIn6 p { font-size: 1.2em; }
 }
 
 
@@ -36,7 +34,5 @@ Mobile Portrait
 }
 /* ----------- iPhone 4 and 4S ----------- */
 @media only screen and (max-width: 320px) and (orientation: portrait) {
-    #ctaTxtWrapper p, #txtIn6 p {
-        font-size: 1.2em;
-    }
+    #ctaTxtWrapper p, #txtIn6 p { font-size: 1.2em; }
 }
