--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-size: 16px;
+    overflow: hidden;
 }
 
 
@@ -35,21 +36,26 @@ html, body {
     position: absolute;
     top: 5em;
     left: 1em;
+    max-width: 9em;
 }
 
 .cloud4 {
     position: absolute;
+    top: 1em;
     left: 15em;
+    max-width: 14em;
 }
 
 .cloud21 {
     position: absolute;
     left: 40em;
+    max-width: 10em;
 }
 
 .cloud3 {
     position: absolute;
-    left: 65em;
+    left: 60em;
+    max-width: 12em;
 }
 
 .robot {
@@ -70,13 +76,10 @@ html, body {
 
 ----------------------------------------------------------------------------- */
 
-
-
 /*
 Mobile Landscape
 ----------------------------------------------------------------------------- */
-
-@media only screen and (max-width: 820px) and (max-height: 420px) and  (orientation: landscape) {
+@media only screen and (max-width: 820px) and (max-height: 420px) and (orientation: landscape) {
     .logo {
         top: 0.5em;
         left: 0.5em;
@@ -93,8 +96,8 @@ Mobile Landscape
 /*
 Mobile Portrait
 ------------------------------------------------------------------------------*/
-
-@media only screen and (max-width: 480px) and (orientation: portrait) {
+@media only screen and (max-width: 480px) {
     .site       { background-image: url("../images/MobileBackground.svg"); }
     .skyline    { display: block; }
+    .cloud2, .cloud4, .cloud21, .cloud3 { display: none; }
 }
