--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,6 +86,33 @@ Mobile Landscape
 
         width: 2em;
     }
+    .cloud2 {
+        position: absolute;
+        top: 3em;
+        left: 0.5em;
+        max-width: 4em;
+    }
+
+    .cloud4 {
+        position: absolute;
+        top: 1em;
+        left: 10em;
+        max-width: 8em;
+    }
+
+    .cloud21 {
+        position: absolute;
+        top: 1em;
+        left: 24em;
+        max-width: 6em;
+    }
+
+    .cloud3 {
+        position: absolute;
+        top: 1em;
+        left: 34em;
+        max-width: 6em;
+    }
 }
 
 
